--- a/v4/css/styles.css
+++ b/v4/css/styles.css
@@ -50,7 +50,7 @@ legend{
     border-bottom: 1px dashed gray;
 }
 
-.blocchamps input {
+.blocchamps input,  .blocchamps select{
     width: 39%;
 }
 
@@ -91,8 +91,6 @@ legend{
     cursor: pointer;
     border: 1px solid black;
     border-radius: 5px;
-    
-    height: auto;
 }
 
 .footer{
